--- a/src/styles/speakers.module.scss
+++ b/src/styles/speakers.module.scss
@@ -39,6 +39,9 @@ h2 {
   font-size: 4em;
   text-align: center;
   margin-bottom: .3em;
+  @media screen and (max-width: $screen-desktop) {
+    font-size: 3em;
+  }
 }
 
 .yearSections {
